samples/_failures_safe/1761124968_71307e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89215103.c: In function ‘parse_term’:
./samples/SAFE/__tmp_89215103.c:173:9: error: expected declaration or statement at end of input
  173 |         } else {
      |         ^
./samples/SAFE/__tmp_89215103.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89215103.c:173:9: error: expected declaration or statement at end of input
